# shomei

./: .gitignore  CHANGELOG.md  Dockerfile  Justfile  README.md  cabal.project  docker-compose.yaml  flake.module.nix  flake.module.nix.example  flake.nix  mina.kdl  mori.dhall  process-compose.yaml
examples/embedded-servant-app/: embedded-servant-app.cabal
examples/embedded-servant-app/app/: Main.hs
examples/embedded-servant-app/src/Embedded/: App.hs
examples/embedded-servant-app/test/: Main.hs
examples/embedded-servant-app/www/: README.md  index.html  passkeys.js  style.css
examples/embedded-with-en/: README.md  cabal.project  embedded-with-en.cabal
examples/embedded-with-en/app/: Main.hs
examples/embedded-with-en/src/EmbeddedEn/: App.hs  Authz.hs
examples/microservice-auth-stack/: README.md  microservice-auth-stack.cabal  process-compose.yaml
examples/microservice-auth-stack/app/: Main.hs
examples/microservice-auth-stack/src/Downstream/: Service.hs
examples/microservice-auth-stack/test/: Main.hs
shomei-client/: shomei-client.cabal
shomei-client/src/Shomei/: Client.hs
shomei-client/test/: Main.hs
shomei-core/: shomei-core.cabal
shomei-core/data/: common-passwords.txt
shomei-core/src/Shomei/: Config.hs  Error.hs  Id.hs  Prelude.hs  Totp.hs  Workflow.hs
shomei-core/src/Shomei/Domain/: AuthorizationCode.hs  Claims.hs  Command.hs  CommonPasswords.hs  Credential.hs  Email.hs  Event.hs  EventCodec.hs  IdTokenClaims.hs  LoginAttempt.hs  LoginId.hs  Notification.hs  OAuthClient.hs  OneTimeToken.hs  Passkey.hs  Password.hs  PasswordResetToken.hs  RefreshToken.hs  ServiceAccount.hs  Session.hs  SigningKey.hs  Token.hs  Totp.hs  User.hs  VerificationToken.hs
shomei-core/src/Shomei/Effect/: AuthEventPublisher.hs  AuthEventReader.hs  AuthUnitOfWork.hs  ClaimsEnricher.hs  Clock.hs  CredentialStore.hs  InMemory.hs  LoginAttemptStore.hs  Notifier.hs  OAuthClientStore.hs  OAuthCodeStore.hs  PasskeyStore.hs  PasswordBreachChecker.hs  PasswordHasher.hs  PasswordResetTokenStore.hs  PendingCeremonyStore.hs  RecoveryCodeStore.hs  RefreshTokenStore.hs  RoleStore.hs  ServiceAccountStore.hs  SessionStore.hs  SigningKeyStore.hs  TokenGen.hs  TokenSigner.hs  TokenVerifier.hs  TotpCredentialStore.hs  UserStore.hs  VerificationTokenStore.hs  WebAuthnCeremony.hs
shomei-core/src/Shomei/Workflow/: Account.hs  Admin.hs  Breach.hs  ClientCredentials.hs  Impersonation.hs  Mfa.hs  OAuthAuthorize.hs  OAuthTokenGrant.hs  Passkey.hs  Roles.hs  ServiceToken.hs  Session.hs  TokenExchange.hs  Totp.hs
shomei-core/test/: Main.hs
shomei-core/test/Shomei/: AccountSpec.hs  BreachSpec.hs  LockoutSpec.hs  OAuthClientStoreSpec.hs  OAuthCodeStoreSpec.hs  PasskeyStoreSpec.hs  ServiceAccountStoreSpec.hs  TotpSpec.hs  TotpStoreSpec.hs  WebAuthnCeremonySpec.hs  WorkflowSpec.hs
shomei-core/test/Shomei/Domain/: EventCodecSpec.hs  PasswordSpec.hs
shomei-core/test/Shomei/Workflow/: AdminSpec.hs  ClientCredentialsSpec.hs  ConcurrencySpec.hs  EmailVerificationSpec.hs  ImpersonationSpec.hs  MfaSpec.hs  PasskeySpec.hs  RolesSpec.hs  ServiceTokenSpec.hs  TimingSpec.hs  TokenExchangeSpec.hs
shomei-jwt/: shomei-jwt.cabal
shomei-jwt/src/Shomei/Jwt/: Jwks.hs  Key.hs  KeyProtection.hs  Rotation.hs  Sign.hs  Verify.hs
shomei-jwt/test/: Main.hs
shomei-jwt/test/Shomei/Jwt/: IdTokenSpec.hs  InterpreterSpec.hs  JwksSpec.hs  KeyProtectionSpec.hs  KeySpec.hs  RotationSpec.hs  RsaCustomClaimSpec.hs  SignVerifySpec.hs  TestSupport.hs
shomei-migrations/: shomei-migrations.cabal
shomei-migrations/app/: Main.hs
shomei-migrations/sql-migrations/: 2026-06-03-00-00-01-shomei-users.sql  2026-06-03-18-44-54-shomei-sessions.sql  2026-06-03-18-44-57-shomei-auth-events.sql  2026-06-04-00-00-00-shomei-users-email-verified.sql  2026-06-04-00-00-02-shomei-password-reset-tokens.sql  2026-06-04-05-46-55-shomei-email-verification-tokens.sql  2026-06-05-00-00-01-shomei-account-lockouts.sql  2026-06-05-12-37-20-shomei-login-attempts.sql  2026-06-17-12-07-46-shomei-sessions-actor.sql  2026-06-18-00-00-00-shomei-webauthn-credentials.sql  2026-06-18-00-00-01-shomei-webauthn-pending-ceremonies.sql  2026-06-19-00-00-02-shomei-password-credentials-login-id.sql  2026-06-19-00-00-03-shomei-password-credentials-email-optional.sql  2026-06-19-16-55-51-shomei-users-login-id.sql  2026-06-19-16-55-52-shomei-users-email-optional.sql  2026-07-09-13-51-07-sweeper-indexes-and-retention.sql  2026-07-09-20-34-28-shomei-role-grants.sql  2026-07-10-03-54-27-shomei-service-accounts.sql  2026-07-10-14-15-52-shomei-oauth-clients.sql  2026-07-10-14-55-38-shomei-oauth-authorization-codes.sql  2026-07-10-15-25-43-shomei-sessions-oauth-client.sql  2026-07-10-18-00-02-shomei-totp-credentials.sql  2026-07-10-18-00-03-shomei-recovery-codes.sql  2026-07-11-00-15-02-shomei-role-permissions.sql
shomei-migrations/src/Shomei/: Migrations.hs
shomei-migrations/test-support/Shomei/Migrations/: TestSupport.hs
shomei-postgres/: shomei-postgres.cabal
shomei-postgres/src/Shomei/: Crypto.hs
shomei-postgres/src/Shomei/Postgres/: AuthEventPublisher.hs  AuthEventReader.hs  AuthUnitOfWork.hs  Clock.hs  Codec.hs  CredentialStore.hs  Database.hs  LoginAttemptStore.hs  Maintenance.hs  OAuthClientStore.hs  OAuthCodeStore.hs  PasskeyStore.hs  PasswordResetTokenStore.hs  PendingCeremonyStore.hs  Pool.hs  RecoveryCodeStore.hs  RefreshTokenStore.hs  RoleStore.hs  ServiceAccountStore.hs  SessionStore.hs  SigningKeyStore.hs  TotpCredentialStore.hs  UserStore.hs  VerificationTokenStore.hs
shomei-postgres/test/: Main.hs
shomei-servant/: shomei-servant.cabal
shomei-servant/app/openapi/: Main.hs
shomei-servant/src/Shomei/Servant/: API.hs  Auth.hs  Authz.hs  Cookie.hs  DTO.hs  Error.hs  Handlers.hs  Middleware.hs  OAuth.hs  Oidc.hs  (+2 more)
shomei-servant/test/: Main.hs
shomei-servant/test-openapi/: Main.hs
shomei-server/: shomei-server.cabal
shomei-server/app/: Admin.hs  Main.hs
shomei-server/src/Shomei/: Notify.hs
shomei-server/test/: Main.hs
shomei-server/test/Admin/: Main.hs
shomei-webauthn/: shomei-webauthn.cabal
shomei-webauthn/test/: Main.hs
(+121 files in other folders)
