cabal-version: 3.0
name:          shomei-client
version:       0.1.0.0
synopsis:      Haskell client for the standalone Shōmei auth service
license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell
    TypeFamilies

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules: Shomei.Client
  build-depends:
    , base                 >=4.18 && <5
    , base64
    , bytestring
    , http-api-data
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , servant-client-core
    , shomei-core
    , shomei-servant
    , text

test-suite shomei-client-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , http-client
    , http-types
    , servant-client
    , shomei-client
    , shomei-core
    , shomei-migrations:test-support
    , shomei-postgres
    , shomei-servant
    , shomei-server
    , tasty
    , tasty-hunit
    , text
    , warp
