cabal-version: 3.0
name:          shomei-core
version:       0.1.0.0
synopsis:
  Transport-agnostic domain: types, commands, events, errors, and effects

description:
  shomei-core contains the domain model that does not depend on any
  transport, database, or JWT library. All other packages depend on it.

license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Config
    Shomei.Domain.Claims
    Shomei.Domain.Command
    Shomei.Domain.Credential
    Shomei.Domain.Email
    Shomei.Domain.Event
    Shomei.Domain.LoginAttempt
    Shomei.Domain.Notification
    Shomei.Domain.OneTimeToken
    Shomei.Domain.Passkey
    Shomei.Domain.Password
    Shomei.Domain.PasswordResetToken
    Shomei.Domain.RefreshToken
    Shomei.Domain.Session
    Shomei.Domain.SigningKey
    Shomei.Domain.Token
    Shomei.Domain.User
    Shomei.Domain.VerificationToken
    Shomei.Effect.AuthEventPublisher
    Shomei.Effect.Clock
    Shomei.Effect.CredentialStore
    Shomei.Effect.InMemory
    Shomei.Effect.LoginAttemptStore
    Shomei.Effect.Notifier
    Shomei.Effect.PasswordHasher
    Shomei.Effect.PasswordResetTokenStore
    Shomei.Effect.RefreshTokenStore
    Shomei.Effect.SessionStore
    Shomei.Effect.SigningKeyStore
    Shomei.Effect.TokenGen
    Shomei.Effect.TokenSigner
    Shomei.Effect.TokenVerifier
    Shomei.Effect.UserStore
    Shomei.Effect.VerificationTokenStore
    Shomei.Effect.WebAuthnCeremony
    Shomei.Error
    Shomei.Id
    Shomei.Prelude
    Shomei.Workflow
    Shomei.Workflow.Account

  build-depends:
    , aeson
    , base            >=4.18 && <5
    , base64
    , bytestring
    , containers
    , effectful
    , effectful-core
    , generic-lens
    , http-api-data
    , lens
    , mmzk-typeid
    , text
    , time
    , uuid

test-suite shomei-core-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Shomei.AccountSpec
    Shomei.LockoutSpec
    Shomei.WebAuthnCeremonySpec
    Shomei.WorkflowSpec

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , effectful
    , effectful-core
    , shomei-core
    , tasty
    , tasty-hunit
    , text
    , time
