cabal-version:      3.0
name:               shomei-core
version:            0.1.0.0
synopsis:
  Transport-agnostic domain: types, commands, events, errors, and effects

description:
  shomei-core contains the domain model that does not depend on any
  transport, database, or JWT library. All other packages depend on it.

license:            MIT
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
category:           Web, Security

-- Embedded at compile time by Shomei.Domain.CommonPasswords via Template Haskell.
extra-source-files: data/common-passwords.txt

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Config
    Shomei.Domain.AuthorizationCode
    Shomei.Domain.Claims
    Shomei.Domain.Command
    Shomei.Domain.CommonPasswords
    Shomei.Domain.Credential
    Shomei.Domain.Email
    Shomei.Domain.Event
    Shomei.Domain.EventCodec
    Shomei.Domain.IdTokenClaims
    Shomei.Domain.LoginAttempt
    Shomei.Domain.LoginId
    Shomei.Domain.Notification
    Shomei.Domain.OAuthClient
    Shomei.Domain.OneTimeToken
    Shomei.Domain.Passkey
    Shomei.Domain.Password
    Shomei.Domain.PasswordResetToken
    Shomei.Domain.RefreshToken
    Shomei.Domain.ServiceAccount
    Shomei.Domain.Session
    Shomei.Domain.SigningKey
    Shomei.Domain.Token
    Shomei.Domain.User
    Shomei.Domain.VerificationToken
    Shomei.Effect.AuthEventPublisher
    Shomei.Effect.AuthEventReader
    Shomei.Effect.AuthUnitOfWork
    Shomei.Effect.ClaimsEnricher
    Shomei.Effect.Clock
    Shomei.Effect.CredentialStore
    Shomei.Effect.InMemory
    Shomei.Effect.LoginAttemptStore
    Shomei.Effect.Notifier
    Shomei.Effect.OAuthClientStore
    Shomei.Effect.OAuthCodeStore
    Shomei.Effect.PasskeyStore
    Shomei.Effect.PasswordBreachChecker
    Shomei.Effect.PasswordHasher
    Shomei.Effect.PasswordResetTokenStore
    Shomei.Effect.PendingCeremonyStore
    Shomei.Effect.RefreshTokenStore
    Shomei.Effect.RoleStore
    Shomei.Effect.ServiceAccountStore
    Shomei.Effect.SessionStore
    Shomei.Effect.SigningKeyStore
    Shomei.Effect.TokenGen
    Shomei.Effect.TokenSigner
    Shomei.Effect.TokenVerifier
    Shomei.Effect.UserStore
    Shomei.Effect.VerificationTokenStore
    Shomei.Effect.WebAuthnCeremony
    Shomei.Error
    Shomei.Id
    Shomei.Prelude
    Shomei.Workflow
    Shomei.Workflow.Account
    Shomei.Workflow.Admin
    Shomei.Workflow.Breach
    Shomei.Workflow.ClientCredentials
    Shomei.Workflow.Impersonation
    Shomei.Workflow.Mfa
    Shomei.Workflow.OAuthAuthorize
    Shomei.Workflow.OAuthTokenGrant
    Shomei.Workflow.Passkey
    Shomei.Workflow.Roles
    Shomei.Workflow.ServiceToken
    Shomei.Workflow.Session

  build-depends:
    , aeson
    , base            >=4.18   && <5
    , base64
    , bytestring
    , containers
    , crypton
    , effectful
    , effectful-core
    , file-embed      >=0.0.15 && <0.0.17
    , generic-lens
    , http-api-data
    , lens
    , mmzk-typeid
    , ram
    , text
    , time
    , uuid

test-suite shomei-core-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Shomei.AccountSpec
    Shomei.BreachSpec
    Shomei.Domain.EventCodecSpec
    Shomei.Domain.PasswordSpec
    Shomei.LockoutSpec
    Shomei.OAuthClientStoreSpec
    Shomei.OAuthCodeStoreSpec
    Shomei.PasskeyStoreSpec
    Shomei.ServiceAccountStoreSpec
    Shomei.WebAuthnCeremonySpec
    Shomei.Workflow.AdminSpec
    Shomei.Workflow.ClientCredentialsSpec
    Shomei.Workflow.ConcurrencySpec
    Shomei.Workflow.EmailVerificationSpec
    Shomei.Workflow.ImpersonationSpec
    Shomei.Workflow.MfaSpec
    Shomei.Workflow.PasskeySpec
    Shomei.Workflow.RolesSpec
    Shomei.Workflow.ServiceTokenSpec
    Shomei.Workflow.TimingSpec
    Shomei.WorkflowSpec

  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , containers
    , effectful
    , effectful-core
    , generic-lens
    , shomei-core
    , tasty
    , tasty-hunit
    , text
    , time
    , uuid
