cabal-version: 3.0
name:          shomei-jwt
version:       0.1.0.0
synopsis:      JWT access-token signing/verification and JWKS publishing
license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Jwt.Jwks
    Shomei.Jwt.Key
    Shomei.Jwt.Rotation
    Shomei.Jwt.Sign
    Shomei.Jwt.Verify

  build-depends:
    , aeson
    , base               >=4.18  && <5
    , base64-bytestring
    , bytestring
    , containers
    , crypton            >=1.1.0
    , effectful
    , effectful-core
    , jose
    , lens
    , monad-time
    , mtl
    , ram
    , shomei-core
    , text
    , time

test-suite shomei-jwt-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Shomei.Jwt.InterpreterSpec
    Shomei.Jwt.JwksSpec
    Shomei.Jwt.KeySpec
    Shomei.Jwt.RotationSpec
    Shomei.Jwt.RsaCustomClaimSpec
    Shomei.Jwt.SignVerifySpec
    Shomei.Jwt.TestSupport

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , effectful
    , jose
    , lens
    , ram
    , shomei-core
    , shomei-jwt
    , tasty
    , tasty-hunit
    , text
    , time
