cabal-version:      3.0
name:               shomei-migrations
version:            0.1.0.0
synopsis:           Schema migrations for Shōmei (codd-managed, embedded SQL)
description:
  Owns Shōmei's PostgreSQL schema. Embeds Shōmei's timestamped SQL migrations
  with file-embed and applies them through codd. Exposes a public test-support
  sublibrary that provisions a fresh ephemeral PostgreSQL with the schema applied.

license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Database, Security
build-type:         Simple
extra-source-files: sql-migrations/*.sql

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules: Shomei.Migrations
  build-depends:
    , aeson       >=2.1    && <2.3
    , attoparsec
    , base        >=4.18   && <5
    , bytestring
    , codd        >=0.1.8  && <0.2
    , containers
    , file-embed  >=0.0.15 && <0.0.17
    , streaming
    , text
    , time

executable shomei-migrate
  import:         warnings, shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , codd
    , shomei-migrations
    , time

library test-support
  import:          warnings, shared
  visibility:      public
  hs-source-dirs:  test-support
  exposed-modules: Shomei.Migrations.TestSupport
  build-depends:
    , aeson              >=2.1   && <2.3
    , attoparsec
    , base               >=4.18  && <5
    , codd               >=0.1.8 && <0.2
    , containers
    , ephemeral-pg       >=0.2   && <0.3
    , shomei-migrations
    , text
    , time
