cabal-version: 3.0
name:          shomei-postgres
version:       0.1.0.0
synopsis:
  PostgreSQL adapters for Shōmei's store/publisher/signing-key ports

license:       BSD-3-Clause
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
copyright:     2026 Nadeem Bitar
category:      Database, Security
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    GADTs
    LambdaCase
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    RecordWildCards
    TemplateHaskell
    TypeFamilies

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Crypto
    Shomei.Postgres.AuthEventPublisher
    Shomei.Postgres.AuthEventReader
    Shomei.Postgres.AuthUnitOfWork
    Shomei.Postgres.Clock
    Shomei.Postgres.Codec
    Shomei.Postgres.CredentialStore
    Shomei.Postgres.Database
    Shomei.Postgres.LoginAttemptStore
    Shomei.Postgres.Maintenance
    Shomei.Postgres.OAuthClientStore
    Shomei.Postgres.PasskeyStore
    Shomei.Postgres.PasswordResetTokenStore
    Shomei.Postgres.PendingCeremonyStore
    Shomei.Postgres.Pool
    Shomei.Postgres.RefreshTokenStore
    Shomei.Postgres.RoleStore
    Shomei.Postgres.ServiceAccountStore
    Shomei.Postgres.SessionStore
    Shomei.Postgres.SigningKeyStore
    Shomei.Postgres.UserStore
    Shomei.Postgres.VerificationTokenStore

  build-depends:
    , aeson
    , base                  >=4.18  && <5
    , bytestring
    , containers
    , contravariant-extras
    , crypton               >=1.1.0
    , effectful
    , effectful-core
    , hasql                 >=1.10
    , hasql-pool            >=1.2
    , hasql-transaction     >=1.0
    , ram
    , shomei-core
    , stm
    , text
    , time
    , transformers
    , uuid

test-suite shomei-postgres-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , containers
    , effectful
    , effectful-core
    , hasql
    , hasql-pool
    , shomei-core
    , shomei-migrations:test-support
    , shomei-postgres
    , tasty
    , tasty-hunit
    , text
    , time
    , uuid
