cabal-version: 3.0
name:          shomei-servant
version:       0.1.0.0
synopsis:
  Servant combinators and handlers: Authenticated, RequireRole/RequireScope, ShomeiAPI

license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    LambdaCase
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell
    TypeFamilies
    TypeOperators

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Servant.API
    Shomei.Servant.Auth
    Shomei.Servant.Authz
    Shomei.Servant.DTO
    Shomei.Servant.Error
    Shomei.Servant.Handlers
    Shomei.Servant.Seam

  build-depends:
    , aeson
    , base            >=4.18   && <5
    , bytestring
    , containers
    , cookie
    , effectful
    , effectful-core
    , lens
    , network
    , openapi-hs
    , servant         >=0.20.2
    , servant-openapi
    , servant-server  >=0.20
    , shomei-core
    , text
    , time
    , uuid
    , wai

test-suite shomei-servant-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , effectful
    , generic-lens
    , http-client
    , http-types
    , jose
    , servant-server
    , shomei-core
    , shomei-jwt
    , shomei-servant
    , tasty
    , tasty-hunit
    , text
    , time
    , uuid
    , wai
    , warp
