cabal-version: 3.0
name:          shomei-servant
version:       0.1.0.0
synopsis:
  Servant combinators and handlers: Authenticated, RequireRole/RequireScope, ShomeiAPI

license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    LambdaCase
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell
    TypeFamilies
    TypeOperators

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Servant.API
    Shomei.Servant.Auth
    Shomei.Servant.Authz
    Shomei.Servant.Cookie
    Shomei.Servant.DTO
    Shomei.Servant.Error
    Shomei.Servant.Handlers
    Shomei.Servant.Middleware
    Shomei.Servant.OpenApi
    Shomei.Servant.Seam

  build-depends:
    , aeson
    , base            >=4.18   && <5
    , bytestring
    , containers
    , cookie
    , http-api-data
    , effectful
    , effectful-core
    , http-types
    , insert-ordered-containers
    , lens
    , network
    , openapi-hs
    , servant         >=0.20.2
    , servant-openapi
    , servant-server  >=0.20
    , shomei-core
    , text
    , time
    , uuid
    , wai

executable shomei-openapi
  import:         warnings, shared
  hs-source-dirs: app/openapi
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , shomei-servant

-- | OpenAPI 3.1 conformance (EP-27 M4): property-checks that every JSON body
-- type's actual 'ToJSON' encoding validates against its generated 'ToSchema',
-- plus smoke assertions on the assembled document. Kept separate from the
-- end-to-end HTTP suite because it is hspec/QuickCheck-based.
test-suite shomei-servant-openapi-test
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test-openapi
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleInstances
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , hspec
    , openapi-hs
    , QuickCheck
    , quickcheck-instances
    , servant
    , servant-openapi
    , servant-server
    , shomei-servant
    , text

test-suite shomei-servant-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , case-insensitive
    , containers
    , effectful
    , generic-lens
    , http-client
    , http-types
    , jose
    , servant-server
    , shomei-core
    , shomei-jwt
    , shomei-servant
    , tasty
    , tasty-hunit
    , text
    , time
    , uuid
    , wai
    , warp
