cabal-version: 3.0
name:          shomei-server
version:       0.1.0.0
synopsis:      Standalone Shōmei authentication service
license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    LambdaCase
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    QualifiedDo
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Notify
    Shomei.Server.App
    Shomei.Server.Boot
    Shomei.Server.Config
    Shomei.Server.Keys
    Shomei.Server.Middleware.RateLimit
    Shomei.Server.Observability.Logging
    Shomei.Server.Observability.Metrics

  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , bytestring
    , containers
    , effectful
    , effectful-core
    , hasql-pool
    , http-types
    , jose
    , network
    , servant-server
    , shomei-core
    , shomei-jwt
    , shomei-migrations
    , shomei-postgres
    , shomei-servant
    , stm
    , text
    , time
    , unix
    , unordered-containers
    , uuid
    , wai
    , warp

executable shomei-server
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , shomei-server

test-suite shomei-server-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Shomei.Server.E2ESpec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , hasql
    , hasql-pool
    , http-client
    , http-types
    , shomei-core
    , shomei-migrations:test-support
    , shomei-postgres
    , shomei-server
    , tasty
    , tasty-hunit
    , text
    , warp
