cabal-version: 3.0
name:          shomei-server
version:       0.1.0.0
synopsis:      Standalone Shōmei authentication service
license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    LambdaCase
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Shomei.Notify
    Shomei.Server.App
    Shomei.Server.Boot
    Shomei.Server.BreachChecker
    Shomei.Server.Config
    Shomei.Server.Keys
    Shomei.Server.Middleware.RateLimit
    Shomei.Server.Observability.Logging
    Shomei.Server.Observability.Metrics

  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , bytestring
    , containers
    , effectful
    , effectful-core
    , hasql-pool
    , http-client
    , http-client-tls
    , http-types
    , jose
    , network
    , process
    , servant-server
    , shomei-core
    , shomei-jwt
    , shomei-migrations
    , shomei-postgres
    , shomei-servant
    , shomei-webauthn
    , stm
    , text
    , time
    , unix
    , unordered-containers
    , uuid
    , wai
    , warp

executable shomei-server
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , shomei-server

-- EP-4: the operational CLI. A second executable in this package (MasterPlan 2 default;
-- avoids registering a new mori.dhall package). It reuses the same pool/config/key/interpreter
-- assembly the server uses, but needs no servant/wai.
executable shomei-admin
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Admin.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Shomei.Admin.Audit
    Shomei.Admin.Env
    Shomei.Admin.Keys
    Shomei.Admin.Users

  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , bytestring
    , containers
    , contravariant-extras
    , effectful
    , effectful-core
    , hasql
    , hasql-pool
    , optparse-applicative
    , shomei-core
    , shomei-jwt
    , shomei-migrations
    , shomei-postgres
    , text
    , time
    , uuid

test-suite shomei-server-config-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Shomei/Server/ConfigSpec.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , containers
    , shomei-core
    , shomei-server
    , tasty
    , tasty-hunit
    , text

test-suite shomei-admin-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: app test
  main-is:        Admin/Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Shomei.Admin.Audit
    Shomei.Admin.Env
    Shomei.Admin.Keys
    Shomei.Admin.Users

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , contravariant-extras
    , effectful
    , effectful-core
    , hasql
    , hasql-pool
    , jose
    , optparse-applicative
    , shomei-core
    , shomei-jwt
    , shomei-migrations
    , shomei-migrations:test-support
    , shomei-postgres
    , tasty
    , tasty-hunit
    , text
    , time
    , uuid

test-suite shomei-server-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Shomei.Server.E2ESpec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , hasql
    , hasql-pool
    , http-client
    , http-types
    , shomei-core
    , shomei-migrations:test-support
    , shomei-postgres
    , shomei-server
    , tasty
    , tasty-hunit
    , text
    , warp
