cabal-version: 3.0
name:          embedded-servant-app
version:       0.1.0.0
synopsis:      Demo: Shōmei auth routes embedded inside a host Servant app
license:       MIT
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
category:      Web, Security

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules: Embedded.App
  build-depends:
    , aeson
    , base            >=4.18 && <5
    , servant-server
    , shomei-core
    , shomei-server
    , shomei-servant
    , text
    , wai

executable embedded-servant-app
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , embedded-servant-app
    , shomei-server
    , warp

test-suite embedded-servant-app-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , embedded-servant-app
    , http-client
    , http-types
    , shomei-client
    , shomei-core
    , shomei-migrations:test-support
    , shomei-postgres
    , shomei-servant
    , shomei-server
    , tasty
    , tasty-hunit
    , text
    , warp
